--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "ConnEthics website - AI ethics consulting and knowledge management platform",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:legacy": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,13 +14,15 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@types/nodemailer": "^6.4.17",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1"
+    "react-hook-form": "^7.61.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
