--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "description": "ConnEthics website - AI ethics consulting and knowledge management platform",
   "scripts": {
     "dev": "next dev --turbopack",
-    "dev:legacy": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/system": "^7.2.0",
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
