--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.534.0",
     "next": "15.4.10",
     "nodemailer": "^7.0.5",
